// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Register Page Snapshot matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="sc-blHHSb dgokRm"
  >
    <form
      class="sc-gtLWhw hKLlpe"
    >
      <img
        alt="Logo"
        class="logo"
        src="purple-logo-1.png"
      />
      <h1
        class="sc-egkSDF jqxTLg"
      >
        Create Account
      </h1>
      <input
        class="sc-ivxoEo cpCjet"
        placeholder="Full Name"
        type="text"
        value=""
      />
      <input
        class="sc-ivxoEo cpCjet"
        placeholder="Email"
        type="email"
        value=""
      />
      <input
        class="sc-ivxoEo cpCjet"
        placeholder="Password (min 6 characters)"
        type="password"
        value=""
      />
      <input
        class="sc-ivxoEo cpCjet"
        placeholder="Confirm Password"
        type="password"
        value=""
      />
      <button
        class="sc-ghWlax cjPBiw"
        color="#5F259E"
        colorhover="#451B74"
        labelcolor="#FFFFFF"
        type="submit"
        width="100%"
      >
        <span>
          Register
        </span>
      </button>
      <div
        class="sc-dntaoT fCrSHr"
      >
        <span>
          Already have an account?
        </span>
        <a
          href="/login"
        >
          Login
        </a>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Register Page Snapshot matches snapshot with error 1`] = `
<DocumentFragment>
  <div
    class="sc-blHHSb dgokRm"
  >
    <form
      class="sc-gtLWhw hKLlpe"
    >
      <img
        alt="Logo"
        class="logo"
        src="purple-logo-1.png"
      />
      <h1
        class="sc-egkSDF jqxTLg"
      >
        Create Account
      </h1>
      <span
        class="sc-fAUdSK gATvNP"
      >
        Email already registered
      </span>
      <input
        class="sc-ivxoEo cpCjet"
        placeholder="Full Name"
        type="text"
        value=""
      />
      <input
        class="sc-ivxoEo cpCjet"
        placeholder="Email"
        type="email"
        value=""
      />
      <input
        class="sc-ivxoEo cpCjet"
        placeholder="Password (min 6 characters)"
        type="password"
        value=""
      />
      <input
        class="sc-ivxoEo cpCjet"
        placeholder="Confirm Password"
        type="password"
        value=""
      />
      <button
        class="sc-ghWlax cjPBiw"
        color="#5F259E"
        colorhover="#451B74"
        labelcolor="#FFFFFF"
        type="submit"
        width="100%"
      >
        <span>
          Register
        </span>
      </button>
      <div
        class="sc-dntaoT fCrSHr"
      >
        <span>
          Already have an account?
        </span>
        <a
          href="/login"
        >
          Login
        </a>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Register Page Snapshot matches snapshot with loading state 1`] = `
<DocumentFragment>
  <div
    class="sc-blHHSb dgokRm"
  >
    <form
      class="sc-gtLWhw hKLlpe"
    >
      <img
        alt="Logo"
        class="logo"
        src="purple-logo-1.png"
      />
      <h1
        class="sc-egkSDF jqxTLg"
      >
        Create Account
      </h1>
      <input
        class="sc-ivxoEo cpCjet"
        placeholder="Full Name"
        type="text"
        value=""
      />
      <input
        class="sc-ivxoEo cpCjet"
        placeholder="Email"
        type="email"
        value=""
      />
      <input
        class="sc-ivxoEo cpCjet"
        placeholder="Password (min 6 characters)"
        type="password"
        value=""
      />
      <input
        class="sc-ivxoEo cpCjet"
        placeholder="Confirm Password"
        type="password"
        value=""
      />
      <button
        class="sc-ghWlax cjPBiw"
        color="#5F259E"
        colorhover="#451B74"
        labelcolor="#FFFFFF"
        type="submit"
        width="100%"
      >
        <span>
          Loading...
        </span>
      </button>
      <div
        class="sc-dntaoT fCrSHr"
      >
        <span>
          Already have an account?
        </span>
        <a
          href="/login"
        >
          Login
        </a>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
